include(api/source_files.cmake)
include(http/source_files.cmake)

kullo_add_simple_library(
    ${api_cpp_source_files}
    ${http_cpp_source_files}
    registry.cpp
    api_impl/addressimpl.cpp
    api_impl/api_Address.cpp
    api_impl/api_Client.cpp
    api_impl/api_Conversations.cpp
    api_impl/api_InternalDateTimeUtils.cpp
    api_impl/api_MasterKey.cpp
    api_impl/api_Registry.cpp
    api_impl/api_UserSettings.cpp
    api_impl/asynctaskimpl.cpp
    api_impl/attachmentscontentworker.cpp
    api_impl/attachmentssavetoworker.cpp
    api_impl/challengeimpl.cpp
    api_impl/clientaddressexistsworker.cpp
    api_impl/clientcheckcredentialsworker.cpp
    api_impl/clientcreatesessionworker.cpp
    api_impl/clientgeneratekeyssigningworker.cpp
    api_impl/clientgeneratekeysworker.cpp
    api_impl/clientimpl.cpp
    api_impl/conversationsimpl.cpp
    api_impl/deliveryimpl.cpp
    api_impl/draftattachmentsaddworker.cpp
    api_impl/draftattachmentscontentworker.cpp
    api_impl/draftattachmentsimpl.cpp
    api_impl/draftattachmentssavetoworker.cpp
    api_impl/draftsimpl.cpp
    api_impl/event.cpp
    api_impl/exception_conversion.cpp
    api_impl/logfunctionwrapper.cpp
    api_impl/masterkeyimpl.cpp
    api_impl/messageattachmentscontentworker.cpp
    api_impl/messageattachmentsimpl.cpp
    api_impl/messageattachmentssavetoworker.cpp
    api_impl/messageseventdispatcher.cpp
    api_impl/messagesimpl.cpp
    api_impl/registrationimpl.cpp
    api_impl/registrationregisteraccountworker.cpp
    api_impl/removaleventdispatcher.cpp
    api_impl/sendersimpl.cpp
    api_impl/sessionaccountinfoworker.cpp
    api_impl/sessionregisterpushtokenworker.cpp
    api_impl/sessionimpl.cpp
    api_impl/syncerdownloadattachmentsformessageworker.cpp
    api_impl/syncerimpl.cpp
    api_impl/syncerrunworker.cpp
    api_impl/syncerworker.cpp
    api_impl/taskimpl.cpp
    api_impl/usersettingsimpl.cpp
    api_impl/worker.cpp
    codec/messagecompressor.cpp
    codec/messagedecoder.cpp
    codec/messagedecryptor.cpp
    codec/messageencoder.cpp
    codec/messageencryptor.cpp
    codec/privatekeyprovider.cpp
    crypto/asymmetriccryptor.cpp
    crypto/asymmetrickeygenerator.cpp
    crypto/asymmetrickeyloader.cpp
    crypto/hasher.cpp
    crypto/hkdf.cpp
    crypto/info.cpp
    crypto/privatekey.cpp
    crypto/privatekeyimpl.cpp
    crypto/publickey.cpp
    crypto/publickeyimpl.cpp
    crypto/signer.cpp
    crypto/symmetriccryptor.cpp
    crypto/symmetrickey.cpp
    crypto/symmetrickeygenerator.cpp
    crypto/symmetrickeyimpl.cpp
    crypto/symmetrickeyloader.cpp
    dao/asymmetrickeypairdao.cpp
    dao/attachmentdao.cpp
    dao/conversationdao.cpp
    dao/deliverydao.cpp
    dao/draftdao.cpp
    dao/messagedao.cpp
    dao/participantdao.cpp
    dao/publickeydao.cpp
    dao/symmetrickeydao.cpp
    dao/syncdao.cpp
    dao/unprocessedmessagedao.cpp
    db/dbsession.cpp
    protocol/accountclient.cpp
    protocol/accountsclient.cpp
    protocol/baseclient.cpp
    protocol/debug.cpp
    protocol/keysclient.cpp
    protocol/httpstructs.cpp
    protocol/messagesclient.cpp
    protocol/publickeysclient.cpp
    protocol/pushclient.cpp
    protocol/requestlistener.cpp
    protocol/responselistener.cpp
    sync/attachmentsyncer.cpp
    sync/definitions.cpp
    sync/keyssyncer.cpp
    sync/messageadder.cpp
    sync/messagessender.cpp
    sync/messagessyncer.cpp
    sync/messagesuploader.cpp
    sync/syncer.cpp
    util/assert.cpp
    util/asynctask.cpp
    util/base64.cpp
    util/binary.cpp
    util/checkedconverter.cpp
    util/crash.cpp
    util/datetime.cpp
    util/delivery.cpp
    util/exceptions.cpp
    util/filesystem.cpp
    util/formatstring.cpp
    util/gzip.cpp
    util/hex.cpp
    util/jsonhelper.cpp
    util/kulloaddress.cpp
    util/librarylogger.cpp
    util/masterkey.cpp
    util/scopedbenchmark.cpp
    util/stacktrace.cpp
    util/stltaskrunner.cpp
    util/urlencoding.cpp
    util/usersettings.cpp
    util/version.cpp
)

kullo_get_target_name(target_name)
target_link_libraries(${target_name}
	PUBLIC
	    # from this project
		botan
		jsoncpp
		nowide

	    # from other projects in workspace
		boost_filesystem
		boost_regex
		smartsqlite
)
